docs: add documentation for create Opening
